# CodeFighter

./: .gitignore  CMakeLists.txt  CodeFighter.cbp  CodeFighters.cbp  INSTALL_WINDOWS.txt  README.md
include/: BattleState.h  CardView.h  Character.h  CharacterSelectionState.h  CharacterView.h  ConcreteAbilities.h  GameController.h  IAbility.h  MenuState.h  OptionState.h  Player.h  State.h
include/abilities/: AllAbilities.h  Flexbox.h  GoRoutine.h  IAbility.h  IncludeOnce.h  JavaException.h  Pipe.h  PythonStrike.h  SelectTarget.h  Undefined.h
include/controllers/: GameController.h
include/core/: ResourceManager.h
include/models/: Character.h  Player.h  StatusEffect.h
include/states/: BattleState.h  CharacterSelectionState.h  MenuState.h  OptionState.h  State.h
include/views/: CardView.h  CharacterView.h
src/: Character.cpp  CharacterView.cpp  Player.cpp  Skill.cpp  Skill.h  main.cpp
src/controllers/: GameController.cpp
src/core/: ResourceManager.cpp
src/models/: Character.cpp  Player.cpp  Skill.cpp
src/states/: BattleState.cpp  CharacterSelectionState.cpp  MenuState.cpp  OptionState.cpp
src/views/: CardView.cpp  CharacterView.cpp
tools/: update_cbp.py
